--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "uuid": "^9.0.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
