--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "uuid": "^9.0.1",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.1"
