--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "faker": "^6.6.6",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "uuid": "^9.0.1",
     "validator": "^13.12.0",
+    "yaml": "^2.4.3",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.1"
+    "@faker-js/faker": "^8.4.1",
+    "nodemon": "^3.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
