user subscripton completed remains cron-job

--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "faker": "^6.6.6",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "qrcode": "^1.5.3",
+    "speakeasy": "^2.0.0",
     "uuid": "^9.0.1",
     "validator": "^13.12.0",
     "yaml": "^2.4.3",
