--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "faker": "^6.6.6",
+    "hi-base32": "^0.5.1",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
+    "otpauth": "^9.3.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
