--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@apollo/server": "^4.10.4",
+    "@apollo/subgraph": "^2.8.2",
     "@ngrok/ngrok": "^1.3.0",
+    "apollo-server-core": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -21,6 +25,9 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "faker": "^6.6.6",
+    "graphql": "^16.9.0",
+    "graphql-http": "^1.22.1",
+    "graphql-tag": "^2.12.6",
     "hi-base32": "^0.5.1",
     "joi": "^17.13.1",
     "js-base64": "^3.7.7",
