--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "-": "^0.0.1",
     "@apollo/server": "^4.10.4",
     "@apollo/subgraph": "^2.8.2",
     "@ngrok/ngrok": "^1.3.0",
@@ -26,6 +27,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "faker": "^6.6.6",
+    "firebase-admin": "^12.3.0",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
     "graphql-tag": "^2.12.6",
@@ -45,6 +47,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "qrcode": "^1.5.3",
+    "save": "^2.9.0",
     "socket.io": "^4.7.5",
     "speakeasy": "^2.0.0",
     "urlsafe-base64": "^1.0.0",
